--- a/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
+++ b/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
@@ -1,34 +1,25 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <UserSecretsId>dotnet-MentorSync.MigrationService-312706a7-fd0e-47e1-b9cb-fbadbad55b5c</UserSecretsId>
-        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-    </PropertyGroup>
+	<PropertyGroup>
+		<UserSecretsId>dotnet-MentorSync.MigrationService-312706a7-fd0e-47e1-b9cb-fbadbad55b5c</UserSecretsId>
+	</PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.0" />
-        <PackageReference Include="Bogus" Version="35.6.3" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.13.0" />
-        <PackageReference Include="OpenTelemetry.Api" Version="1.12.0" />
-        <PackageReference Include="System.Text.Json" Version="9.0.8" />
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
+		<PackageReference Include="Bogus" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" />
+		<PackageReference Include="Microsoft.IdentityModel.Tokens" />
+		<PackageReference Include="OpenTelemetry.Api" />
+		<PackageReference Include="System.Text.Json" />
+	</ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\..\aspire\MentorSync.ServiceDefaults\MentorSync.ServiceDefaults.csproj" />
-      <ProjectReference Include="..\Modules\Materials\MentorSync.Materials\MentorSync.Materials.csproj" />
-      <ProjectReference Include="..\Modules\Ratings\MentorSync.Ratings\MentorSync.Ratings.csproj" />
-      <ProjectReference Include="..\Modules\Recommendations\MentorSync.Recommendations\MentorSync.Recommendations.csproj" />
-      <ProjectReference Include="..\Modules\Scheduling\MentorSync.Scheduling\MentorSync.Scheduling.csproj" />
-      <ProjectReference Include="..\Modules\Users\MentorSync.Users\MentorSync.Users.csproj" />
-    </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\aspire\MentorSync.ServiceDefaults\MentorSync.ServiceDefaults.csproj" />
+		<ProjectReference Include="..\Modules\Materials\MentorSync.Materials\MentorSync.Materials.csproj" />
+		<ProjectReference Include="..\Modules\Ratings\MentorSync.Ratings\MentorSync.Ratings.csproj" />
+		<ProjectReference Include="..\Modules\Recommendations\MentorSync.Recommendations\MentorSync.Recommendations.csproj" />
+		<ProjectReference Include="..\Modules\Scheduling\MentorSync.Scheduling\MentorSync.Scheduling.csproj" />
+		<ProjectReference Include="..\Modules\Users\MentorSync.Users\MentorSync.Users.csproj" />
+	</ItemGroup>
 
-    <ItemGroup>
-      <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
-      <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-      <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
-      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
-    </ItemGroup>
 </Project>
