--- a/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
+++ b/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
@@ -1,35 +1,27 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+	<Sdk Name="Aspire.AppHost.Sdk" Version="9.5" />
 
-    <Sdk Name="Aspire.AppHost.Sdk" Version="9.4" />
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<UserSecretsId>dc0fc8e3-3a05-42e5-bc00-c18ccb8b4bd0</UserSecretsId>
+		<IsAspireProject>true</IsAspireProject>
+	</PropertyGroup>
 
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <UserSecretsId>dc0fc8e3-3a05-42e5-bc00-c18ccb8b4bd0</UserSecretsId>
-        <IsAspireProject>true</IsAspireProject>
-    </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Aspire.Hosting.AppHost" />
+		<PackageReference Include="Aspire.Hosting.Azure" />
+		<PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" />
+		<PackageReference Include="Aspire.Hosting.Azure.Storage" />
+		<PackageReference Include="Aspire.Hosting.MongoDB" />
+		<PackageReference Include="Aspire.Hosting.NodeJs" />
+		<PackageReference Include="CommunityToolkit.Aspire.Hosting.NodeJS.Extensions" />
+		<PackageReference Include="System.Text.Json" />
+	</ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.4.2" />
-        <PackageReference Include="Aspire.Hosting.Azure" Version="9.4.2" />
-        <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.4.2" />
-        <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.4.0" />
-        <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.4.0" />
-        <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.4.0" />
-        <PackageReference Include="CommunityToolkit.Aspire.Hosting.NodeJS.Extensions" Version="9.7.0" />
-        <PackageReference Include="System.Text.Json" Version="9.0.8" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\..\src\MentorSync.API\MentorSync.API.csproj" />
-      <ProjectReference Include="..\..\src\MentorSync.MigrationService\MentorSync.MigrationService.csproj" />
-      <ProjectReference Include="..\..\src\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" IsAspireProjectResource="False" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
-      <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-      <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
-      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
-    </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\src\MentorSync.API\MentorSync.API.csproj" />
+		<ProjectReference Include="..\..\src\MentorSync.MigrationService\MentorSync.MigrationService.csproj" />
+		<ProjectReference Include="..\..\src\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" IsAspireProjectResource="False" />
+	</ItemGroup>
 
 </Project>
