--- a/src/Modules/Recommendations/MentorSync.Recommendations/MentorSync.Recommendations.csproj
+++ b/src/Modules/Recommendations/MentorSync.Recommendations/MentorSync.Recommendations.csproj
@@ -1,41 +1,33 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
-    <PackageReference Include="Microsoft.ML" Version="4.0.2" />
-    <PackageReference Include="Microsoft.ML.Recommender" Version="0.22.2" />
-    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-    <PackageReference Include="System.Text.Json" Version="9.0.8" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" />
-    <ProjectReference Include="..\..\Materials\MentorSync.Materials.Contracts\MentorSync.Materials.Contracts.csproj" />
-    <ProjectReference Include="..\..\Ratings\MentorSync.Ratings.Contracts\MentorSync.Ratings.Contracts.csproj" />
-    <ProjectReference Include="..\..\Scheduling\MentorSync.Scheduling.Contracts\MentorSync.Scheduling.Contracts.csproj" />
-    <ProjectReference Include="..\..\Users\MentorSync.Users.Contracts\MentorSync.Users.Contracts.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\Migrations\" />
+<Project Sdk="Microsoft.NET.Sdk">
+
+	<ItemGroup>
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+		<PackageReference Include="Microsoft.ML" />
+		<PackageReference Include="Microsoft.ML.Recommender" />
+		<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+		<PackageReference Include="System.Text.Json" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" />
+		<ProjectReference Include="..\..\Materials\MentorSync.Materials.Contracts\MentorSync.Materials.Contracts.csproj" />
+		<ProjectReference Include="..\..\Ratings\MentorSync.Ratings.Contracts\MentorSync.Ratings.Contracts.csproj" />
+		<ProjectReference Include="..\..\Scheduling\MentorSync.Scheduling.Contracts\MentorSync.Scheduling.Contracts.csproj" />
+		<ProjectReference Include="..\..\Users\MentorSync.Users.Contracts\MentorSync.Users.Contracts.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include="Data\Migrations\" />
 		<Compile Remove="Data\Migrations\*.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
-    <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-    <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
-    <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
-  </ItemGroup>
+	</ItemGroup>
 </Project>
