--- a/.editorconfig
+++ b/.editorconfig
@@ -134,6 +134,16 @@ dotnet_diagnostic.CA1716.severity = none
 # Uri properties should not be strings
 dotnet_diagnostic.CA1056.severity = none
 
+# Do not catch general exception types
+dotnet_diagnostic.CA1031.severity = none
+
+# Specify IFormatProvider in string formatting methods
+dotnet_diagnostic.CA1305.severity = none
+
+#method length configuration
+MA0051.maximum_lines_per_method = 40
+MA0051.skip_local_functions = true
+
 # Types: use var
 csharp_style_var_for_built_in_types = true:error
 csharp_style_var_when_type_is_apparent = false:none
