tests: Add architecture tests and enforce conventions
Introduces the MentorSync.ArchitectureTests project with comprehensive tests for CQRS, VSA, modular monolith, and naming conventions using ArchUnitNET and xUnit. Updates solution and project files to include the new test project and necessary dependencies. Refactors notification handler class names to follow *CommandHandler and *QueryHandler conventions, and adds InternalsVisibleTo for architecture tests. These changes ensure architectural consistency and enforce best practices across the codebase.

--- a/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
+++ b/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
@@ -22,4 +22,8 @@
 		<ProjectReference Include="..\Modules\Users\MentorSync.Users\MentorSync.Users.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="MentorSync.ArchitectureTests" />
+	</ItemGroup>
+
 </Project>
