--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -54,5 +54,12 @@
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="9.0.6" />
     <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
     <PackageVersion Include="System.Text.Json" Version="9.0.10" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+    <PackageVersion Include="xunit.v3" Version="3.2.0" />
+    <PackageVersion Include="xunit.analyzers" Version="1.25.0" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5" />
+		<PackageVersion Include="TngTech.ArchUnitNET.xUnitV3" Version="0.12.3" />
+		<PackageVersion Include="TngTech.ArchUnitNET" Version="0.12.3" />
   </ItemGroup>
 </Project>
