--- a/src/MentorSync.API/MentorSync.API.csproj
+++ b/src/MentorSync.API/MentorSync.API.csproj
@@ -30,4 +30,8 @@
 		<ProjectReference Include="..\Modules\Users\MentorSync.Users\MentorSync.Users.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="MentorSync.ArchitectureTests" />
+	</ItemGroup>
+
 </Project>
