Ignore CHANGELOG.md in semantic versioning workflow
Added CHANGELOG.md to the paths-ignore list in the semantic-versioning GitHub Actions workflow to prevent unnecessary workflow runs when only the changelog is updated.

--- a/.github/workflows/semantic-versioning.yml
+++ b/.github/workflows/semantic-versioning.yml
@@ -5,11 +5,12 @@ on:
         branches:
             - master
         paths-ignore:
+            - "CHANGELOG.md"
             - "scripts/**"
             - "**/*.md"
-           - "docs/**"
-           - ".github/dependabot.yml"
-           - ".github/dependabot/**"
+            - "docs/**"
+            - ".github/dependabot.yml"
+            - ".github/dependabot/**"
 
 permissions:
     contents: write
