Remove docs directory from semantic versioning paths
Updated the semantic-versioning workflow to exclude the docs/ directory from change_path, so changes in documentation no longer trigger a version bump.

--- a/.github/workflows/semantic-versioning.yml
+++ b/.github/workflows/semantic-versioning.yml
@@ -38,7 +38,7 @@ jobs:
                   major_pattern: "^(break|breaking|major):"
                   minor_pattern: "^(feat|feature):"
                   version_format: "${major}.${minor}.${patch}"
-                  change_path: "src/,tests/,aspire/,docs/"
+                  change_path: "src/,tests/,aspire/"
                   namespace: v
                   search_commit_body: true
 
