--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,6 +5,7 @@
 		<Authors>Andrii Borkovych</Authors>
 		<Company>AndrewSolutions</Company>
 		<Product>MentorSync</Product>
+		<Version>1.0.0</Version>
 		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/AndriyBorkovich/mentor-sync.git</RepositoryUrl>
 	</PropertyGroup>
