feat: update semantic versioning configuration and fix comments

--- a/.github/workflows/semantic-versioning.yml
+++ b/.github/workflows/semantic-versioning.yml
@@ -39,7 +39,7 @@ jobs:
                   minor_pattern: "^(feat|feature):"
                   version_format: "${major}.${minor}.${patch}"
                   change_path: "src/,tests/,aspire/"
-                  namespace: v
+                  tag_prefix: v
                   search_commit_body: true
 
             - name: Create GitHub Release
