--- a/.github/workflows/semantic-versioning.yml
+++ b/.github/workflows/semantic-versioning.yml
@@ -15,7 +15,7 @@ on:
 env:
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     CI_COMMIT_MESSAGE: CI Automatic push on master
-    CI_COMMIT_AUTHOR: ci@users.noreply.github.com
+    CI_COMMIT_AUTHOR: borkovich25andri@gmail.com
 
 jobs:
     semantic_version:
