--- a/.github/workflows/validate-yaml.yml
+++ b/.github/workflows/validate-yaml.yml
@@ -1,12 +1,18 @@
 name: Validate YAML
+permissions:
+    contents: read
 
 on:
     push:
+        branches:
+            - master
         paths:
             - ".github/**/*.yml"
             - ".github/**/*.yaml"
             - ".yamllint"
     pull_request:
+        branches:
+            - master
         paths:
             - ".github/**/*.yml"
             - ".github/**/*.yaml"
@@ -22,7 +28,6 @@ jobs:
             - name: Run yamllint on workflow files
               uses: ibiqlik/action-yamllint@v3
               with:
-                  file_or_dir: .github/workflows
                   config_file: .yamllint
 
     summary:
