--- a/aspire/MentorSync.AppHost/infra/migration-service.tmpl.yaml
+++ b/aspire/MentorSync.AppHost/infra/migration-service.tmpl.yaml
@@ -1,41 +1,42 @@
 api-version: 2024-02-02-preview
-location: {{ .Env.AZURE_LOCATION }}
+location: { { .Env.AZURE_LOCATION } }
 identity:
-  type: UserAssigned
-  userAssignedIdentities:
-    ? "{{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}"
-    : {}
+    type: UserAssigned
+    userAssignedIdentities:
+        "{{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}": {}
 properties:
-  environmentId: {{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_ID }}
-  configuration:
-    activeRevisionsMode: single
-    runtime:
-      dotnet:
-        autoConfigureDataProtection: true
-    registries:
-      - server: {{ .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT }}
-        identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
-    secrets:
-      - name: connectionstrings--mentorsyncdb
-        keyVaultUrl: '{{ .Env.POSTGRES_DB_KV_VAULTURI }}secrets/connectionstrings--MentorSyncDb'
-        identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
-  template:
-    containers:
-      - image: {{ .Image }}
-        name: migration-service
-        env:
-          - name: AZURE_CLIENT_ID
-            value: {{ .Env.MANAGED_IDENTITY_CLIENT_ID }}
-          - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES
-            value: "true"
-          - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES
-            value: "true"
-          - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY
-            value: in_memory
-          - name: ConnectionStrings__MentorSyncDb
-            secretRef: connectionstrings--mentorsyncdb
-    scale:
-      minReplicas: 1
+    environmentId: { { .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_ID } }
+    configuration:
+        activeRevisionsMode: single
+        runtime:
+            dotnet:
+                autoConfigureDataProtection: true
+        registries:
+            - server: { { .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT } }
+              identity:
+                  { { .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID } }
+        secrets:
+            - name: connectionstrings--mentorsyncdb
+              keyVaultUrl: "{{ .Env.POSTGRES_DB_KV_VAULTURI }}secrets/connectionstrings--MentorSyncDb"
+              identity:
+                  { { .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID } }
+    template:
+        containers:
+            - image: { { .Image } }
+              name: migration-service
+              env:
+                  - name: AZURE_CLIENT_ID
+                    value: { { .Env.MANAGED_IDENTITY_CLIENT_ID } }
+                  - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES
+                    value: "true"
+                  - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES
+                    value: "true"
+                  - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY
+                    value: in_memory
+                  - name: ConnectionStrings__MentorSyncDb
+                    secretRef: connectionstrings--mentorsyncdb
+        scale:
+            minReplicas: 1
 tags:
-  azd-service-name: migration-service
-  aspire-resource-name: migration-service
+    azd-service-name: migration-service
+    aspire-resource-name: migration-service
