--- a/aspire/MentorSync.AppHost/infra/mongo.tmpl.yaml
+++ b/aspire/MentorSync.AppHost/infra/mongo.tmpl.yaml
@@ -1,50 +1,50 @@
 api-version: 2024-02-02-preview
-location: {{ .Env.AZURE_LOCATION }}
+location: { { .Env.AZURE_LOCATION } }
 identity:
-  type: UserAssigned
-  userAssignedIdentities:
-    ? "{{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}"
-    : {}
+    type: UserAssigned
+    userAssignedIdentities:
+        "{{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}": {}
 properties:
-  environmentId: {{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_ID }}
-  configuration:
-    activeRevisionsMode: single
-    runtime:
-      dotnet:
-        autoConfigureDataProtection: true
-    ingress:
-      external: false
-      targetPort: 27017
-      transport: tcp
-      allowInsecure: false
-    registries:
-      - server: {{ .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT }}
-        identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
-    secrets:
-      - name: mongo-initdb-root-password
-        value: '{{ securedParameter "mongo_password" }}'
-      - name: mongo-initdb-root-username
-        value: '{{ securedParameter "mongo_username" }}'
-  template:
-    volumes:
-      - name: mongo-mongodata
-        storageType: AzureFile
-        storageName: {{ .Env.SERVICE_MONGO_VOLUME_MONGODATA_NAME }} 
-    containers:
-      - image: {{ .Image }}
-        name: mongo
-        env:
-          - name: AZURE_CLIENT_ID
-            value: {{ .Env.MANAGED_IDENTITY_CLIENT_ID }}
-          - name: MONGO_INITDB_ROOT_PASSWORD
-            secretRef: mongo-initdb-root-password
-          - name: MONGO_INITDB_ROOT_USERNAME
-            secretRef: mongo-initdb-root-username
-        volumeMounts:
-          - volumeName: mongo-mongodata
-            mountPath: /data/db
-    scale:
-      minReplicas: 1
+    environmentId: { { .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_ID } }
+    configuration:
+        activeRevisionsMode: single
+        runtime:
+            dotnet:
+                autoConfigureDataProtection: true
+        ingress:
+            external: false
+            targetPort: 27017
+            transport: tcp
+            allowInsecure: false
+        registries:
+            - server: { { .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT } }
+              identity:
+                  { { .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID } }
+        secrets:
+            - name: mongo-initdb-root-password
+              value: '{{ securedParameter "mongo_password" }}'
+            - name: mongo-initdb-root-username
+              value: '{{ securedParameter "mongo_username" }}'
+    template:
+        volumes:
+            - name: mongo-mongodata
+              storageType: AzureFile
+              storageName: { { .Env.SERVICE_MONGO_VOLUME_MONGODATA_NAME } }
+        containers:
+            - image: { { .Image } }
+              name: mongo
+              env:
+                  - name: AZURE_CLIENT_ID
+                    value: { { .Env.MANAGED_IDENTITY_CLIENT_ID } }
+                  - name: MONGO_INITDB_ROOT_PASSWORD
+                    secretRef: mongo-initdb-root-password
+                  - name: MONGO_INITDB_ROOT_USERNAME
+                    secretRef: mongo-initdb-root-username
+              volumeMounts:
+                  - volumeName: mongo-mongodata
+                    mountPath: /data/db
+        scale:
+            minReplicas: 1
 tags:
-  azd-service-name: mongo
-  aspire-resource-name: mongo
+    azd-service-name: mongo
+    aspire-resource-name: mongo
