--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,60 +1,59 @@
 name: "CodeQL advanced scanning"
 
 on:
-  push:
-    branches:
-      - master
-    paths-ignore:
-      - "CHANGELOG.md"
-      - "scripts/**"
-      - "**/*.md"
-      - "docs/**"
-  pull_request:
-    branches:
-      - master
-    paths-ignore:
-      - "CHANGELOG.md"
-      - "scripts/**"
-      - "**/*.md"
-      - "docs/**"
-  schedule:
-    - cron: '30 1 * * 0'
+    push:
+        branches:
+            - master
+        paths-ignore:
+            - "CHANGELOG.md"
+            - "scripts/**"
+            - "**/*.md"
+            - "docs/**"
+    pull_request:
+        branches:
+            - master
+        paths-ignore:
+            - "CHANGELOG.md"
+            - "scripts/**"
+            - "**/*.md"
+            - "docs/**"
+    schedule:
+        - cron: "30 1 * * 0"
 
 jobs:
-  analyze:
-    name: Analyze (${{ matrix.language }})
-    runs-on: 'ubuntu-latest'
-    permissions:
-      security-events: write
+    analyze:
+        name: Analyze (${{ matrix.language }})
+        runs-on: "ubuntu-latest"
+        permissions:
+            security-events: write
+            packages: read
+            actions: read
+            contents: read
 
-      packages: read
+        strategy:
+            fail-fast: false
+            matrix:
+                include:
+                    - language: actions
+                      build-mode: none
+                    - language: csharp
+                      build-mode: autobuild
+                    - language: javascript-typescript
+                      build-mode: none
 
-      actions: read
-      contents: read
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
 
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-        - language: actions
-          build-mode: none
-        - language: csharp
-          build-mode: none
-        - language: javascript-typescript
-          build-mode: none
-          
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+            - name: Initialize CodeQL
+              uses: github/codeql-action/init@v4
+              with:
+                  languages: ${{ matrix.language }}
+                  dependency-caching: true
+                  build-mode: ${{ matrix.build-mode }}
+                  queries: security-extended,security-and-quality
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v4
-      with:
-        languages: ${{ matrix.language }}
-        build-mode: ${{ matrix.build-mode }}
-        queries: security-extended,security-and-quality
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v4
-      with:
-        category: "/language:${{matrix.language}}"
+            - name: Perform CodeQL Analysis
+              uses: github/codeql-action/analyze@v4
+              with:
+                  category: "/language:${{matrix.language}}"
