--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,22 @@
 version: 2
 updates:
-  # Enable version updates for BE and Aspire
-  - package-ecosystem: "nuget"
-    directory: "/"
-    schedule:
-      interval: "weekly"
+    # Enable version updates for BE and Aspire
+    - package-ecosystem: "nuget"
+      directory: "/"
+      schedule:
+          interval: "weekly"
 
-  # Enable version updates for UI
-  - package-ecosystem: "npm"
-    directory: "/src/MentorSync.UI"
-    schedule:
-      interval: "weekly"
+    # Enable version updates for UI
+    - package-ecosystem: "npm"
+      directory: "/src/MentorSync.UI"
+      schedule:
+          interval: "weekly"
+
+    # Enable version updates for GitHub Actions workflows
+    - package-ecosystem: "github-actions"
+      directory: "/.github/workflows"
+      schedule:
+          interval: "weekly"
+      labels:
+          - "infrastucture"
+      target-branch: "dev"
