--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,5 +18,4 @@ updates:
       schedule:
           interval: "weekly"
       labels:
-          - "infrastucture"
-      target-branch: "dev"
+          - "infrastructure"
